--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <header>
-        <div class="dark-mode">
+        <div class="dark-ligth-mode">
             <label class="ui-switch">
-                <input type="checkbox">
+                <input type="checkbox" class="input-mode">
                 <div class="slider">
                     <div class="circle"></div>
                 </div>
