--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matheus Cavalieri</title>
     <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -24,12 +29,22 @@
             <a href="/">Skills </a>
         </div>
     </header>
-
     <main>
         <section class="homePage">
-            <div class="left">
-
+            <div class="principal">
+                <aside class="apresentacao">
+                    <p class="saudacao">
+                        Hello Everyone
+                    </p>
+                    <h1 class="nome">
+                        Matheus
+                    </h1>
+                    <h1 class="sobrenome">
+                        Cavalieri
+                    </h1>
+                </aside>
             </div>
+            <div class="rigth"></div>
         </section>
     </main>
 
