--- a/index.html
+++ b/index.html
@@ -42,9 +42,42 @@
                     <h1 class="sobrenome">
                         Cavalieri
                     </h1>
+                    <div class="devWeb">
+                        <p>Desenvolvedor Web</p>
+                        <div class="seta">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                                <path
+                                    d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z" />
+                            </svg>
+                        </div>
+                    </div>
                 </aside>
             </div>
             <div class="rigth"></div>
+        </section>
+
+        <section class="skills">
+            <h3>Skills</h3>
+
+            <div class="frontEnd">
+                <div class="habilidade">
+                    <img src="/assets/img/simboloHTML.png" alt="">
+                    <h4>HTML 5</h4>
+                </div>
+                <div class="habilidade">
+                    <img src="/assets/img/css-3 (1) 1.png" alt="">
+                    <h4>CSS 3</h4>
+                </div>
+                <div class="habilidade">
+                    <img src="/assets/img/js 1.png" alt="">
+                    <h4>Java Script</h4>
+                </div>
+                <div class="habilidade">
+                    <img src="/assets/img/figma-removebg-preview 1.png" alt="">
+                    <h4>UX/UI</h4>
+                </div>
+            </div>
         </section>
     </main>
 
