--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <div class="slider">
                     <div class="circle"></div>
                 </div>
+            </label>
         </div>
-        </label>
         <div class="menu">
             <a href="/">Projetos </a>
             <a href="/">Contate-me </a>
@@ -58,26 +58,44 @@
         </section>
 
         <section class="skills">
-            <h3>Skills</h3>
 
-            <div class="frontEnd">
-                <div class="habilidade">
-                    <img src="/assets/img/simboloHTML.png" alt="">
-                    <h4>HTML 5</h4>
-                </div>
-                <div class="habilidade">
-                    <img src="/assets/img/css-3 (1) 1.png" alt="">
-                    <h4>CSS 3</h4>
-                </div>
-                <div class="habilidade">
-                    <img src="/assets/img/js 1.png" alt="">
-                    <h4>Java Script</h4>
-                </div>
-                <div class="habilidade">
-                    <img src="/assets/img/figma-removebg-preview 1.png" alt="">
-                    <h4>UX/UI</h4>
+            <div class="skillsFront">
+                <h3>Skills</h3>
+                <h2 class="backFront">Front End</h2>
+                <div class="frontEnd">
+                    <div class="habilidade">
+                        <img src="/assets/img/html.png" alt="">
+                        <h4>HTML 5</h4>
+                    </div>
+                    <div class="habilidade">
+                        <img src="/assets/img/css-3 (1).png" alt="">
+                        <h4>CSS 3</h4>
+                    </div>
+                    <div class="habilidade">
+                        <img src="/assets/img/js (1).png" alt="">
+                        <h4>Java Script</h4>
+                    </div>
+                    <div class="habilidade">
+                        <img src="/assets/img/figma (1).png" alt="">
+                        <h4>UX/UI</h4>
+                    </div>
                 </div>
             </div>
+            <div class="backEnd">
+                <h3 class="backFront">Back End</h3>
+                <div class="skillsBack">
+                    <div class="habilidade">
+                        <img src="/assets/img/do-sustenido.png" alt="">
+                        <h4>C#</h4>
+                    </div>
+
+                    <div class="habilidade">
+                        <img src="/assets/img/servidor-sql.png" alt="">
+                        <h4>SQL</h4>
+                    </div>
+                </div>
+            </div>
+
         </section>
     </main>
 
