--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="menu">
             <a href="/">Projetos </a>
             <a href="/">Contate-me </a>
-            <a href="/">Skills </a>
+            <a href="#skills">Skills </a>
         </div>
     </header>
     <main>
@@ -57,7 +57,7 @@
             <div class="rigth"></div>
         </section>
 
-        <section class="skills">
+        <section class="skills" id="skills">
 
             <div class="skillsFront">
                 <h3>Skills</h3>
@@ -96,6 +96,35 @@
                 </div>
             </div>
 
+        </section>
+
+        <section id="projetos" class="projetos">
+            <div class="titulo">
+                <h1>
+                    Projetos
+                </h1>
+            </div>
+            <div class="projeto">
+                <div class="preview">
+                    <img src="/assets/img/Sem título.png" alt="">
+                </div>
+                <p class=""></p>
+            </div>
+            <div class="projeto">
+                <div class="preview">
+                    <p class=""></p>
+                </div>
+            </div>
+            <div class="projeto">
+                <div class="preview">
+                    <p class=""></p>
+                </div>
+            </div>
+            <div class="projeto">
+                <div class="preview">
+                    <p class=""></p>
+                </div>
+            </div>
         </section>
     </main>
 
