--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </label>
         </div>
         <div class="menu">
-            <a href="/">Projetos </a>
-            <a href="/">Contate-me </a>
+            <a href="#projetos">Projetos </a>
+            <a href="#contato">Contate-me </a>
             <a href="#skills">Skills </a>
         </div>
     </header>
@@ -106,7 +106,7 @@
             </div>
             <div class="projeto">
                 <div class="preview">
-                    <img src="/assets/img/Sem título.png" alt="">
+                    <img alt="">
                 </div>
                 <p class=""></p>
             </div>
@@ -126,6 +126,32 @@
                 </div>
             </div>
         </section>
+        <section id="contato" class="contato">
+            <div class="contate-me">
+                <h3>
+                    Contate-me
+                </h3>
+
+                <h4>Entre em contato comigo preenchendo o formulário abaixo. Seja para esclarecer dúvidas, discutir
+                    projetos
+                    ou enviar feedbacks, estou aqui para ajudar!</h4>
+
+                <form action="/">
+                    <div>
+                        <input type="text" placeholder="Nome" required><input type="text" placeholder="Sobrenome"
+                            required>
+                    </div>
+                    <div>
+                        <input type="text" placeholder="E-mail" required><input type="text"
+                            placeholder="Telefone (Opcional)" required>
+                    </div>
+                    <div><input type="text" class="mensagem" placeholder="Mensagem" required></div>
+                    <input type="submit" value="Enviar Mensagem" class="submit">
+                </form>
+            </div>
+        </section>
+
+
     </main>
 
     <script src="/assets/js/script.js"></script>
