tela de contato ajustes

--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
                     </div>
                     <div>
                         <input type="text" placeholder="E-mail" required><input type="text"
-                            placeholder="Telefone (Opcional)" required>
+                            placeholder="Telefone (Opcional)">
                     </div>
-                    <div><input type="text" class="mensagem" placeholder="Mensagem" required></div>
+                    <div><textarea class="mensagem" placeholder="Mensagem" required></textarea></div>
                     <input type="submit" value="Enviar Mensagem" class="submit">
                 </form>
             </div>
