--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="/assets/img/icon.png">
 </head>
 
 <body>
@@ -150,7 +151,21 @@
                 </form>
             </div>
         </section>
-
+        <footer>
+            <h1>Me siga nas redes</h1>
+            <div>
+                <img src="/assets/img/github (1).png" alt="logo github">
+                <a href="https://github.com/Cavalieri1999">GitHub</a>
+            </div>
+            <div>
+                <img src="/assets/img/linkedin.png" alt="logo github">
+                <a href="https://www.linkedin.com/in/matheus-cavalieri-507083305/">LinkedIn</a>
+            </div>
+            <div>
+                <img src="/assets/img/o-email.png" alt="logo github">
+                <a href="/"> cavalierimatheus325@gmail.com</a>
+            </div>
+        </footer>
 
     </main>
 
