--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-        <link rel="icon" type="image/x-icon" href="/assets/img/icon.png">
+    <link rel="icon" type="image/x-icon" href="/assets/img/icon.png">
 </head>
 
 <body>
@@ -107,14 +107,15 @@
             </div>
             <div class="projeto">
                 <div class="preview">
-                    <img alt="">
+                    <img src="/assets/img/lista de tarefas.png" alt="">
                 </div>
                 <p class=""></p>
             </div>
             <div class="projeto">
                 <div class="preview">
-                    <p class=""></p>
+                    <img src="/assets/img/calculadora de imc.png" alt="">
                 </div>
+                <p class=""></p>
             </div>
             <div class="projeto">
                 <div class="preview">
@@ -168,7 +169,6 @@
         </footer>
 
     </main>
-
     <script src="/assets/js/script.js"></script>
 </body>
 
