--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
             <div class="projeto">
                 <div class="preview">
-                    <p class=""></p>
+                    <img src="/assets/img/calculadora.png" alt="">
                 </div>
             </div>
             <div class="projeto">
