--- a/index.html
+++ b/index.html
@@ -107,19 +107,19 @@
             </div>
             <div class="projeto">
                 <div class="preview">
-                    <img src="/assets/img/lista de tarefas.png" alt="">
+                    <img src="/" alt="">
                 </div>
                 <p class=""></p>
             </div>
             <div class="projeto">
                 <div class="preview">
-                    <img src="/assets/img/calculadora de imc.png" alt="">
+                    <img src="/" alt="">
                 </div>
                 <p class=""></p>
             </div>
             <div class="projeto">
                 <div class="preview">
-                    <img src="/assets/img/calculadora.png" alt="">
+                    <p class=""></p>
                 </div>
             </div>
             <div class="projeto">
