--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
                     </div>
                 </aside>
             </div>
+            <div class="img">
+                <img src="/assets/img/imagem__3_-removebg-preview.png" alt="">
+            </div>
             <div class="rigth"></div>
         </section>
 
