--- a/index.html
+++ b/index.html
@@ -108,27 +108,12 @@
                     Projetos
                 </h1>
             </div>
-            <div class="projeto">
-                <div class="preview">
-                    <img src="/" alt="">
-                </div>
-                <p class=""></p>
-            </div>
-            <div class="projeto">
-                <div class="preview">
-                    <img src="/" alt="">
-                </div>
-                <p class=""></p>
-            </div>
-            <div class="projeto">
-                <div class="preview">
-                    <p class=""></p>
-                </div>
-            </div>
-            <div class="projeto">
-                <div class="preview">
-                    <p class=""></p>
-                </div>
+            <div class="areaProj">
+                <div class="preview Imc"></div>
+                
+                <div class="preview list"></div>
+                
+                <div class="preview calc"></div>
             </div>
         </section>
         <section id="contato" class="contato">
