--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         </div>
     </header>
     <main>
+        <div class="img">
+            <img src="/assets/img/imagem__3_-removebg-preview.png" alt="">
+        </div>
         <section class="homePage">
             <div class="principal">
                 <aside class="apresentacao">
@@ -55,9 +58,9 @@
                     </div>
                 </aside>
             </div>
-            <div class="img">
+            <!-- <div class="img">
                 <img src="/assets/img/imagem__3_-removebg-preview.png" alt="">
-            </div>
+            </div> -->
             <div class="rigth"></div>
         </section>
 
@@ -109,12 +112,30 @@
                 </h1>
             </div>
             <div class="areaProj">
-                <div class="preview Imc"></div>
-                
-                <div class="preview list"></div>
-                
-                <div class="preview calc"></div>
-            </div>
+                <div class="div-proj">
+                    <div class="preview Imc"></div>
+                    <div class="textos">
+                        <h1>Calculadora De Imc</h1>
+                        <p>Desenvolvi uma calculadora de Índice de Massa Corporal (IMC) amigável ao usuário usando
+                            HTML, CSS e JavaScript. Esta ferramenta interativa permite que os usuários insiram seu peso
+                            e altura, e calcula instantaneamente sua pontuação de IMC, fornecendo uma faixa de peso
+                            saudável e o status de saúde correspondente.</p>
+                    </div>
+                </div>
+                <div class="div-proj">
+                    <div class="preview list"></div>
+                    <div class="textos">
+                        <h1>Lista de tarefas</h1>
+                        <p></p>
+                    </div>
+                </div>
+                <div class="div-proj">
+                    <div class="preview calc"></div>
+                    <div class="textos">
+                        <h1>Calculadora</h1>
+                        <p></p>
+                    </div>
+                </div>
         </section>
         <section id="contato" class="contato">
             <div class="contate-me">
