--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                             required>
                     </div>
                     <div>
-                        <input type="text" placeholder="E-mail" required><input type="text"
-                            placeholder="Telefone (Opcional)">
+                        <input type="email" placeholder="E-mail" required>
+                        <input type="tel" placeholder="Telefone (Opcional)" class="telefone">
                     </div>
                     <div><textarea class="mensagem" placeholder="Mensagem" required></textarea></div>
                     <input type="submit" value="Enviar Mensagem" class="submit">
