--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
                             </svg>
                         </div>
                     </div>
-
                 </aside>
             </div>
             <div class="img">
@@ -97,7 +96,6 @@
                 interatividade por meio da integração com APIs do navegador, como o Canvas para gráficos.
                 Além disso, o HTML5 visa melhorar a acessibilidade, otimizar o carregamento de páginas e
                 eliminar a necessidade de plugins externos, como o Flash.
-                <button class="fechar">Fechar</button>
             </dialog>
             <dialog class="modalCss">
 
@@ -192,7 +190,7 @@
                         <input type="text" placeholder="Sobrenome" class="inputSobrenome">
                     </div>
                     <div>
-                        <input type="email" placeholder="E-mail" required>
+                        <input type="email" placeholder="E-mail" required class="inputEmail">
                         <input type="tel" placeholder="Telefone (Opcional)" class="telefone">
                     </div>
                     <div><textarea class="mensagem" placeholder="Mensagem" required></textarea></div>
