--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/assets/img/icon.png">
+    <link rel="stylesheet" href="/assets/css/versaoMobile.css">
 </head>
 
 <body>
@@ -25,9 +26,9 @@
             </label>
         </div>
         <div class="menu">
-            <a href="#projetos">Projetos </a>
-            <a href="#contato">Contate-me </a>
-            <a href="#skills">Skills </a>
+            <a href="#projetos" class="linkNone">Projetos </a>
+            <a href="#contato" class="linkNone">Contate-me </a>
+            <a href="#skills" class="linkNone">Skills </a>
         </div>
     </header>
     <main>
