--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <section class="skills" id="skills">
 
-            <div class="skillsFront">
+            <div class="skillsFront" data-anima="left">
                 <h3>Skills</h3>
                 <h2 class="backFront">Front End</h2>
                 <div class="frontEnd">
@@ -126,7 +126,27 @@
                 Enquanto o UX foca na experiência e funcionalidade, o UI está relacionado ao visual e à interação direta
                 com o produto.
             </dialog>
-            <div class="backEnd">
+            <dialog class="modalCs">
+                C# (pronúncia-se "C Sharp") é uma linguagem de programação moderna, orientada a objetos e fortemente
+                tipada, desenvolvida pela Microsoft em 2000 como parte de sua plataforma .NET. Ela foi projetada para
+                ser simples, eficiente e robusta, combinando a simplicidade do C e C++ com o poder da programação
+                voltada para o objeto
+                Um dos principais objetivos do C# é fornecer uma linguagem que seja fácil de aprender e usar, mas que
+                também permita a criação de aplicações complexas, como programas de desktop, jogos, aplicativos móveis e
+                web, e sistemas empresariais. A linguagem é amplamente utilizada no desenvolvimento de aplicativos
+                Windows e na criação de aplicativos web dinâmicos usando o framework ASP.NET.
+            </dialog>
+            <dialog class="modalSql">
+                SQL (Structured Query Language) é uma linguagem de programação especialmente projetada para gerenciar e
+                manipular bancos de dados relacionais. Foi criado nos anos 1970 pela IBM e tornou-se o padrão
+                internacional para interação com bancos de dados, sendo amplamente utilizado até hoje em diversos
+                sistemas de gestão de dados, como MySQL, PostgreSQL, SQL Server, Oracle
+                Com SQL, desenvolvedores e analistas de dados podem extrair e manipular grandes volumes de dados de
+                forma eficiente, sendo uma habilidade essencial para trabalhar com bancos de dados em qualquer aplicação
+                que envolva armazenamento e recuperação de informações.
+            </dialog>
+
+            <div class="backEnd" data-anima="rigth">
                 <h3 class="backFront">Back End</h3>
                 <div class="skillsBack">
                     <div class="habilidade cs">
@@ -149,7 +169,7 @@
                     Projetos
                 </h1>
             </div>
-            <div class="areaProj">
+            <div class="areaProj" data-anima="left">
                 <div class="div-proj">
                     <div class="preview Imc"></div>
                     <div class="textos">
@@ -198,6 +218,7 @@
                     <input type="submit" value="Enviar Mensagem" class="submit">
                 </form>
             </div>
+            <div class="fotoDois"><img src="/assets/img/foto2.png" alt=""></div>
         </section>
         <footer>
             <h1>Me siga nas redes</h1>
