--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
                 eliminar a necessidade de plugins externos, como o Flash.
             </dialog>
             <dialog class="modalCss">
-
                 CSS (Cascading Style Sheets) é a linguagem usada para definir a aparência e o layout de páginas web. Ele
                 permite estilizar elementos HTML, controlando aspectos como cores, fontes, margens, espaçamentos,
                 tamanhos, e posicionamentos. Com o CSS, é possível criar layouts responsivos, ajustar a exibição para
@@ -169,8 +168,8 @@
                     Projetos
                 </h1>
             </div>
-            <div class="areaProj" data-anima="left">
-                <div class="div-proj">
+            <div class="areaProj" >
+                <div class="div-proj" data-anima="left">
                     <div class="preview Imc"></div>
                     <div class="textos">
                         <h1>Calculadora De Imc</h1>
@@ -178,25 +177,77 @@
                             HTML, CSS e JavaScript. Esta ferramenta interativa permite que os usuários insiram seu peso
                             e altura, e calcula instantaneamente sua pontuação de IMC, fornecendo uma faixa de peso
                             saudável e o status de saúde correspondente.</p>
+                            <button class="btn-github">
+                                <svg
+                                  width="16"
+                                  height="16"
+                                  viewBox="0 0 16 16"
+                                  fill="none"
+                                  xmlns="http://www.w3.org/2000/svg"
+                                >
+                                  <path
+                                    d="M7.99992 1.33331C7.12444 1.33331 6.25753 1.50575 5.4487 1.84078C4.63986 2.17581 3.90493 2.66688 3.28587 3.28593C2.03563 4.53618 1.33325 6.23187 1.33325 7.99998C1.33325 10.9466 3.24659 13.4466 5.89325 14.3333C6.22659 14.3866 6.33325 14.18 6.33325 14C6.33325 13.8466 6.33325 13.4266 6.33325 12.8733C4.48659 13.2733 4.09325 11.98 4.09325 11.98C3.78659 11.2066 3.35325 11 3.35325 11C2.74659 10.5866 3.39992 10.6 3.39992 10.6C4.06659 10.6466 4.41992 11.2866 4.41992 11.2866C4.99992 12.3 5.97992 12 6.35992 11.84C6.41992 11.4066 6.59325 11.1133 6.77992 10.9466C5.29992 10.78 3.74659 10.2066 3.74659 7.66665C3.74659 6.92665 3.99992 6.33331 4.43325 5.85998C4.36659 5.69331 4.13325 4.99998 4.49992 4.09998C4.49992 4.09998 5.05992 3.91998 6.33325 4.77998C6.85992 4.63331 7.43325 4.55998 7.99992 4.55998C8.56659 4.55998 9.13992 4.63331 9.66659 4.77998C10.9399 3.91998 11.4999 4.09998 11.4999 4.09998C11.8666 4.99998 11.6333 5.69331 11.5666 5.85998C11.9999 6.33331 12.2533 6.92665 12.2533 7.66665C12.2533 10.2133 10.6933 10.7733 9.20659 10.94C9.44659 11.1466 9.66659 11.5533 9.66659 12.1733C9.66659 13.0666 9.66659 13.7866 9.66659 14C9.66659 14.18 9.77325 14.3933 10.1133 14.3333C12.7599 13.44 14.6666 10.9466 14.6666 7.99998C14.6666 7.1245 14.4941 6.25759 14.1591 5.44876C13.8241 4.63992 13.333 3.90499 12.714 3.28593C12.0949 2.66688 11.36 2.17581 10.5511 1.84078C9.7423 1.50575 8.8754 1.33331 7.99992 1.33331V1.33331Z"
+                                    fill="currentcolor"
+                                  ></path>
+                                </svg>
+                                <a href="https://github.com/Cavalieri1999/calculadoraImc">View on Github</a>
+                              </button>                              
                     </div>
                 </div>
-                <div class="div-proj">
+                <div class="div-proj" data-anima="left">
                     <div class="preview list"></div>
                     <div class="textos">
                         <h1>Lista de tarefas</h1>
-                        <p></p>
+                        <p>Desenvolvi uma lista de tarefas com HTML, CSS e JavaScript, que permite aos usuários
+                            adicionar e remover tarefas de maneira simples e eficiente. O design é totalmente
+                            responsivo, proporcionando uma ótima experiência tanto em desktops quanto em dispositivos
+                        </p>
+                        <button class="btn-github">
+                            <svg
+                              width="16"
+                              height="16"
+                              viewBox="0 0 16 16"
+                              fill="none"
+                              xmlns="http://www.w3.org/2000/svg"
+                            >
+                              <path
+                                d="M7.99992 1.33331C7.12444 1.33331 6.25753 1.50575 5.4487 1.84078C4.63986 2.17581 3.90493 2.66688 3.28587 3.28593C2.03563 4.53618 1.33325 6.23187 1.33325 7.99998C1.33325 10.9466 3.24659 13.4466 5.89325 14.3333C6.22659 14.3866 6.33325 14.18 6.33325 14C6.33325 13.8466 6.33325 13.4266 6.33325 12.8733C4.48659 13.2733 4.09325 11.98 4.09325 11.98C3.78659 11.2066 3.35325 11 3.35325 11C2.74659 10.5866 3.39992 10.6 3.39992 10.6C4.06659 10.6466 4.41992 11.2866 4.41992 11.2866C4.99992 12.3 5.97992 12 6.35992 11.84C6.41992 11.4066 6.59325 11.1133 6.77992 10.9466C5.29992 10.78 3.74659 10.2066 3.74659 7.66665C3.74659 6.92665 3.99992 6.33331 4.43325 5.85998C4.36659 5.69331 4.13325 4.99998 4.49992 4.09998C4.49992 4.09998 5.05992 3.91998 6.33325 4.77998C6.85992 4.63331 7.43325 4.55998 7.99992 4.55998C8.56659 4.55998 9.13992 4.63331 9.66659 4.77998C10.9399 3.91998 11.4999 4.09998 11.4999 4.09998C11.8666 4.99998 11.6333 5.69331 11.5666 5.85998C11.9999 6.33331 12.2533 6.92665 12.2533 7.66665C12.2533 10.2133 10.6933 10.7733 9.20659 10.94C9.44659 11.1466 9.66659 11.5533 9.66659 12.1733C9.66659 13.0666 9.66659 13.7866 9.66659 14C9.66659 14.18 9.77325 14.3933 10.1133 14.3333C12.7599 13.44 14.6666 10.9466 14.6666 7.99998C14.6666 7.1245 14.4941 6.25759 14.1591 5.44876C13.8241 4.63992 13.333 3.90499 12.714 3.28593C12.0949 2.66688 11.36 2.17581 10.5511 1.84078C9.7423 1.50575 8.8754 1.33331 7.99992 1.33331V1.33331Z"
+                                fill="currentcolor"
+                              ></path>
+                            </svg>
+                            <a href="https://github.com/Cavalieri1999/listaDeTarefas">View on Github</a>
+                          </button>                              
                     </div>
                 </div>
-                <div class="div-proj">
+                <div class="div-proj" data-anima="left">
                     <div class="preview calc"></div>
                     <div class="textos">
                         <h1>Calculadora</h1>
-                        <p></p>
+                        <p>
+                            Desenvolvi uma calculadora utilizando HTML, CSS e JavaScript, que permite aos usuários
+                            realizar operações matemáticas de forma intuitiva. O design é responsivo, garantindo uma boa
+                            experiência em diferentes dispositivos, de desktops a smartphones.
+                        </p>
+                        <button class="btn-github">
+                            <svg
+                              width="16"
+                              height="16"
+                              viewBox="0 0 16 16"
+                              fill="none"
+                              xmlns="http://www.w3.org/2000/svg"
+                            >
+                              <path
+                                d="M7.99992 1.33331C7.12444 1.33331 6.25753 1.50575 5.4487 1.84078C4.63986 2.17581 3.90493 2.66688 3.28587 3.28593C2.03563 4.53618 1.33325 6.23187 1.33325 7.99998C1.33325 10.9466 3.24659 13.4466 5.89325 14.3333C6.22659 14.3866 6.33325 14.18 6.33325 14C6.33325 13.8466 6.33325 13.4266 6.33325 12.8733C4.48659 13.2733 4.09325 11.98 4.09325 11.98C3.78659 11.2066 3.35325 11 3.35325 11C2.74659 10.5866 3.39992 10.6 3.39992 10.6C4.06659 10.6466 4.41992 11.2866 4.41992 11.2866C4.99992 12.3 5.97992 12 6.35992 11.84C6.41992 11.4066 6.59325 11.1133 6.77992 10.9466C5.29992 10.78 3.74659 10.2066 3.74659 7.66665C3.74659 6.92665 3.99992 6.33331 4.43325 5.85998C4.36659 5.69331 4.13325 4.99998 4.49992 4.09998C4.49992 4.09998 5.05992 3.91998 6.33325 4.77998C6.85992 4.63331 7.43325 4.55998 7.99992 4.55998C8.56659 4.55998 9.13992 4.63331 9.66659 4.77998C10.9399 3.91998 11.4999 4.09998 11.4999 4.09998C11.8666 4.99998 11.6333 5.69331 11.5666 5.85998C11.9999 6.33331 12.2533 6.92665 12.2533 7.66665C12.2533 10.2133 10.6933 10.7733 9.20659 10.94C9.44659 11.1466 9.66659 11.5533 9.66659 12.1733C9.66659 13.0666 9.66659 13.7866 9.66659 14C9.66659 14.18 9.77325 14.3933 10.1133 14.3333C12.7599 13.44 14.6666 10.9466 14.6666 7.99998C14.6666 7.1245 14.4941 6.25759 14.1591 5.44876C13.8241 4.63992 13.333 3.90499 12.714 3.28593C12.0949 2.66688 11.36 2.17581 10.5511 1.84078C9.7423 1.50575 8.8754 1.33331 7.99992 1.33331V1.33331Z"
+                                fill="currentcolor"
+                              ></path>
+                            </svg>
+                            <a href="https://github.com/Cavalieri1999/calculadora">View on Github</a>
+                          </button>                              
                     </div>
                 </div>
         </section>
         <section id="contato" class="contato">
-            <div class="contate-me">
+            <div class="contate-me" data-anima="rigth">
                 <h3>
                     Contate-me
                 </h3>
@@ -220,19 +271,19 @@
             </div>
             <div class="fotoDois"><img src="/assets/img/foto2.png" alt=""></div>
         </section>
-        <footer>
+        <footer data-anima="bottom" class="animacao-button">
             <h1>Me siga nas redes</h1>
             <div>
-                <img src="/assets/img/github (1).png" alt="logo github">
+                <img src="/assets/img/github (1).png" alt="logo">
                 <a href="https://github.com/Cavalieri1999">GitHub</a>
             </div>
             <div>
-                <img src="/assets/img/linkedin.png" alt="logo github">
+                <img src="/assets/img/linkedin.png" alt="logo ">
                 <a href="https://www.linkedin.com/in/matheus-cavalieri-507083305/">LinkedIn</a>
             </div>
             <div>
-                <img src="/assets/img/o-email.png" alt="logo github">
-                <a href="/"> cavalierimatheus325@gmail.com</a>
+                <img src="/assets/img/o-email.png" alt="logo " >
+                <a href=""> cavalierimatheus325@gmail.com</a>
             </div>
         </footer>
 
