--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
                     <h1 class="sobrenome">
                         Cavalieri
                     </h1>
-
+                    <div class="img2">
+                        <img src="/assets/img/imagem__3_-removebg-preview.png" alt="">
+                    </div>
                     <div class="devWeb">
                         <p>Desenvolvedor Web</p>
                         <div class="seta">
