--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             </div>
             <div class="fotoDois" data-anima=""><img src="/assets/img/foto2.png" alt=""></div>
         </section>
-        <footer data-anima="bottom" class="animacao-button">
+        <footer data-anima="bottom" class="">
             <h1>Me siga nas redes</h1>
             <div>
                 <img src="/assets/img/github (1).png" alt="logo">
